<resources>
    <string name="main">Main</string>
    <string name="app_name">CryptoDetails</string>
    <string name="title_home">Home</string>
    <string name="title_my_account">My Account</string>
    <string name="title_notifications">Notifications</string>
    <string name="search">Search</string>
    <string name="code">Code:</string>
    <string name="name">Name:</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="image_picker_dialog_title">Image Picker</string>
    <string name="image_picker_dialog_msg">Select the source for the image</string>
    <string name="image_picker_dialog_gallery_option">Gallery</string>
    <string name="image_picker_dialog_camera_option">Camera</string>
    <string name="title">Title</string>
    <string name="body">Body</string>
    <string name="send_on_channel1">Send on High importannce Channel1</string>
    <string name="send_on_channel2">Send on Low Importance Channel 2</string>
    <string name="dummy_para">How many sentences in a paragraph?There’s often a lot of confusion, but if you’re looking for a general answer to the question, “How many sentences in a paragraph?” the answer is there are 3 to 8 sentences in a paragraph. The important key to take away from this answer is that it’s a rule-of-thumb. If you’re looking for a hard and fast rule, you’re out of luck. A paragraph can consist of a single sentence, and since a single word can be a sentence, you can literally have a paragraph that consists of a single word. Of course, if someone asks you to write a paragraph, they won’t be altogether happy with that, so how much should you write?What do teachers want to see</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="sign_out">Sign Out</string>
    <string name="google_signin">Google Signin</string>
    <string name="display_name">Display Name:</string>
    <string name="email">Email:</string>
    <string name="uid">UID:</string>
    <string name="flavor_category">FLAVOR_CATEGORY:</string>
    <string name="map">Map</string>
    <string name="media_player">MediaPlayer</string>
    <string name="current_location">Current Location</string>
    <string name="google_maps_api_key"></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="media">Media</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="stop">Stop</string>
</resources>