<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_my_account"
        android:icon="@drawable/ic_profile_my_account_black_24dp"
        android:title="@string/title_my_account" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_notifications" />

    <item
        android:id="@+id/map"
        android:icon="@drawable/ic_map_pin"
        android:title="@string/map" />

    <item
        android:id="@+id/media_player"
        android:icon="@drawable/ic_media_player"
        android:title="@string/media" />
</menu>