<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.cryptodetails.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_my_account"
        android:name="com.example.cryptodetails.ui.myAccount.MyAccountFragment"
        android:label="@string/title_my_account"
        tools:layout="@layout/fragment_my_account" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.cryptodetails.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/map"
        android:name="com.example.cryptodetails.ui.map.MapsFragment"
        android:label="@string/map" />

    <fragment
        android:id="@+id/media_player"
        android:name="com.example.cryptodetails.ui.media.MediaPlayerFragment"
        android:label="@string/media_player" />

</navigation>