<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="com.example.cryptodetails.ui.notifications.NotificationsFragment" />

        <variable
            name="viewModel"
            type="com.example.cryptodetails.ui.notifications.NotificationsViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.notifications.NotificationsFragment">

        <EditText
            android:id="@+id/notification_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="Title"
            android:hint="@string/title"
            android:inputType="text" />

        <EditText
            android:id="@+id/notification_body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="Body"
            android:hint="@string/body"
            android:inputType="text" />

        <Button
            android:id="@+id/send_on_channel1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/send_on_channel1" />
        <!--        android:onClick="@{viewModel.}"-->

        <Button
            android:id="@+id/send_on_channel2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/send_on_channel2" />
    </LinearLayout>
</layout>